# gape-rdkit

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeLists.txt.old  CMakePresets.json  CMakeSettings.json  Readme.md  wsl-env
config/: charge.txt
config/MMFF94/: MMFF94-smarts.txt  MMFFSYMB.PAR.txt
config/TAFF/: TAFF_ANGLE_BEND.txt  TAFF_BOND_STRETCH.txt  TAFF_VDW.txt
resources/: 1g9v_omega.sdf  1g9v_omega_20.mol2  1g9v_omega_20.sdf  1gkc_ligand_charged.mol  1gkc_omega.mol2  1oq5_ccdc.mol2  1oq5_omega.mol2  1r58_omega.mol2  1ywr_ccdc.mol2  5ht3.smi  NCI-Open_09-03_20K.smi  P0AD64.sdf  all_ligands_charged.mol  configFile.json  configFileDebug.json  dhfr.mol2  hiv_rt2.mol2  methotrexate.mol2  multiMol.sdf  out.sdf  pdb1bqm.mol2  pdb1dtt.mol2  smarts_library.ok.test  smarts_library.test  smiles_smarts_matches.txt
src/catch_tests/: SolvationCatch.cxx
src/difgape/: ConformerMatcher.cpp  ConformerMatcher.h  ConformerPair.cpp  ConformerPair.h  DifgapeChromosome.cpp  DifgapeChromosome.h  RocsSdfMolecule.cpp  RocsSdfMolecule.h  RocsSdfPair.cpp  RocsSdfPair.h  RocsSdfParser.cpp  RocsSdfParser.h
src/ff/: Mmff.cpp  Mmff.h  MmffAtoms.cpp  MmffAtoms.h  Taff.cpp  Taff.h  TaffAngles.cpp  TaffAngles.h  TaffAtoms.cpp  TaffAtoms.h  TaffBonds.cpp  TaffBonds.h  TaffMinimizer.cpp  TaffMinimizer.h  TaffOops.cpp  TaffOops.h  TaffOperations.cxx  TaffTorsions.cpp  TaffTorsions.h
src/ga/: BinaryStringChromosomePolicy.cpp  BinaryStringChromosomePolicy.h  BinaryTestGa.cpp  BinaryTestGa.h  BinaryTestGaChromosome.cpp  BinaryTestGaChromosome.h  Chromosome.cpp  Chromosome.h  GaBase.h  GaOperation.h  IntegerStringChromosomePolicy.cpp  IntegerStringChromosomePolicy.h  IslandModel.h  LinkedPopLinearSel.h  StringChromosome.cpp  StringChromosome.h  StringChromosomeBase.h
src/gape/: FeatureOverlay.cpp  FeatureOverlay.h  Gape.cpp  Gape.h  GapeApp.cpp  GapeApp.h  GapeSettings.cpp  GapeSettings.h  RotatableBond.cpp  RotatableBond.h  Superposition.cpp  Superposition.h  SuperpositionChromosome.cpp  SuperpositionChromosome.h  SuperpositionCoordinates.cpp  SuperpositionCoordinates.h  SuperpositionGa.cpp  SuperpositionGa.h  SuperpositionMolecule.cpp  SuperpositionMolecule.h  TorsionInfo.h
src/mol/: AcceptorAtom.cpp  AcceptorAtom.h  AcceptorAtomFeature.cpp  AcceptorAtomFeature.h  AromaticRingFeature.cpp  AromaticRingFeature.h  Atom.cpp  Atom.h  AtomAddition.cpp  AtomAddition.h  AtomType.cpp  AtomType.h  Bond.cpp  Bond.h  BondType.cpp  BondType.h  Charge.cpp  Charge.h  ChargeMol.cxx  DonorHydrogenFeature.cpp  DonorHydrogenFeature.h  Feature.cpp  Feature.h  FeatureType.h  FindClosestConformer.cxx  FreeCorner.cpp  FreeCorner.h  Huckel.cpp  Huckel.h  HydrogenBondingType.cpp  HydrogenBondingType.h  HydrophobicFeature.cpp  HydrophobicFeature.h  MolComparer.cpp  MolComparer.h  MolGeometry.cpp  MolGeometry.h  MolUtil.cpp  MolUtil.h  MolecularRms.cpp  (+30 more)
src/prog/: ConformerDistance.cxx  Gape.cxx  MatchSmartsToStructure.cxx  conformerMatcher.cxx  loadMol.cxx  sdfParser.cxx  testChrom.cxx  testEnum.cxx  testGa.cxx
src/test/: ChargeMolTest.cxx  CheckTypesTest.cxx  GapeGemoetryTest.cxx  GeometryTest.cxx  HydrogenBondingTypeCatch.cxx  LeastSquaresTest.cxx  ListProcessorTest.cxx  LoadMolTest.cxx  LoadMulticonformerMolTest.cxx  RotatableBondCatch.cxx  ShapeMetricsMoleculeTest.cxx  SmartsTest.cxx  SmilesTest.cxx  SolvationCatch.cxx  SssrTest.cxx  SubstructureSearchTest.cxx  TaffForcefieldTest.cxx  UllmanIsomorphismTest.cxx
src/util/: Array2D.cpp  Array2D.h  Array2D_vector_storage.h  ConfigFile.cpp  ConfigFile.h  ConnectedGraphFinder.h  CoordOps.cpp  CoordOps.h  DetermineNearestNeighbourLists.h  EigenUtil.cpp  EigenUtil.h  EnumIter.h  FileSystemUtil.cpp  FileSystemUtil.h  GaussianList.cpp  GaussianList.h  GzipReader.cpp  GzipReader.h  GzipWriter.cpp  GzipWriter.h  LeastSquaresFit.cpp  LeastSquaresFit.h  ListProcessor.h  RandomUtil.cpp  RandomUtil.h  Reporter.cpp  Reporter.h  ShapeMetrics.cpp  ShapeMetrics.h  Simplex.cpp  Simplex.h  Sssr.cpp  Sssr.h  TransformOps.cpp  TransformOps.h  Ullmann.h  Util.cpp  Util.h  asa047.cpp
